// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefinementList rendering with facets 1`] = `
Array [
  <div
    className="root customClassName"
  >
    <ul
      className="list"
    >
      Array [
        <li
          className="item"
          onClick={[Function]}
        >
          Array [
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": Object {
                    "attribute": "attribute",
                    "count": 1200,
                    "cssClasses": Object {
                      "checkbox": "checkbox",
                      "count": "count",
                      "disabledShowMore": "disabledShowMore",
                      "item": "item",
                      "label": "label",
                      "labelText": "labelText",
                      "list": "list",
                      "noRefinementRoot": "noRefinementRoot",
                      "noResults": "noResults",
                      "root": "root",
                      "searchBox": "searchBox",
                      "searchable": Object {
                        "form": "form",
                        "input": "input",
                        "loadingIcon": "loadingIcon",
                        "loadingIndicator": "loadingIndicator",
                        "reset": "reset",
                        "resetIcon": "resetIcon",
                        "root": "root",
                        "submit": "submit",
                        "submitIcon": "submitIcon",
                      },
                      "selectedItem": "selectedItem",
                      "showMore": "showMore",
                    },
                    "isRefined": false,
                    "label": "Amazon",
                    "url": undefined,
                  },
                }
              }
            />,
          ]
        </li>,
      ]
      Array [
        <li
          className="item selectedItem"
          onClick={[Function]}
        >
          Array [
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": Object {
                    "attribute": "attribute",
                    "count": 1000,
                    "cssClasses": Object {
                      "checkbox": "checkbox",
                      "count": "count",
                      "disabledShowMore": "disabledShowMore",
                      "item": "item",
                      "label": "label",
                      "labelText": "labelText",
                      "list": "list",
                      "noRefinementRoot": "noRefinementRoot",
                      "noResults": "noResults",
                      "root": "root",
                      "searchBox": "searchBox",
                      "searchable": Object {
                        "form": "form",
                        "input": "input",
                        "loadingIcon": "loadingIcon",
                        "loadingIndicator": "loadingIndicator",
                        "reset": "reset",
                        "resetIcon": "resetIcon",
                        "root": "root",
                        "submit": "submit",
                        "submitIcon": "submitIcon",
                      },
                      "selectedItem": "selectedItem",
                      "showMore": "showMore",
                    },
                    "isRefined": true,
                    "label": "Google",
                    "url": undefined,
                  },
                }
              }
            />,
          ]
        </li>,
      ]
    </ul>
  </div>,
]
`;

exports[`RefinementList rendering with facets and disabled show more 1`] = `
Array [
  <div
    className="root customClassName"
  >
    <ul
      className="list"
    >
      Array [
        <li
          className="item"
          onClick={[Function]}
        >
          Array [
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": Object {
                    "attribute": "attribute",
                    "count": 1200,
                    "cssClasses": Object {
                      "checkbox": "checkbox",
                      "count": "count",
                      "disabledShowMore": "disabledShowMore",
                      "item": "item",
                      "label": "label",
                      "labelText": "labelText",
                      "list": "list",
                      "noRefinementRoot": "noRefinementRoot",
                      "noResults": "noResults",
                      "root": "root",
                      "searchBox": "searchBox",
                      "searchable": Object {
                        "form": "form",
                        "input": "input",
                        "loadingIcon": "loadingIcon",
                        "loadingIndicator": "loadingIndicator",
                        "reset": "reset",
                        "resetIcon": "resetIcon",
                        "root": "root",
                        "submit": "submit",
                        "submitIcon": "submitIcon",
                      },
                      "selectedItem": "selectedItem",
                      "showMore": "showMore",
                    },
                    "isRefined": false,
                    "label": "Amazon",
                    "url": undefined,
                  },
                }
              }
            />,
          ]
        </li>,
      ]
      Array [
        <li
          className="item selectedItem"
          onClick={[Function]}
        >
          Array [
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": Object {
                    "attribute": "attribute",
                    "count": 1000,
                    "cssClasses": Object {
                      "checkbox": "checkbox",
                      "count": "count",
                      "disabledShowMore": "disabledShowMore",
                      "item": "item",
                      "label": "label",
                      "labelText": "labelText",
                      "list": "list",
                      "noRefinementRoot": "noRefinementRoot",
                      "noResults": "noResults",
                      "root": "root",
                      "searchBox": "searchBox",
                      "searchable": Object {
                        "form": "form",
                        "input": "input",
                        "loadingIcon": "loadingIcon",
                        "loadingIndicator": "loadingIndicator",
                        "reset": "reset",
                        "resetIcon": "resetIcon",
                        "root": "root",
                        "submit": "submit",
                        "submitIcon": "submitIcon",
                      },
                      "selectedItem": "selectedItem",
                      "showMore": "showMore",
                    },
                    "isRefined": true,
                    "label": "Google",
                    "url": undefined,
                  },
                }
              }
            />,
          ]
        </li>,
      ]
    </ul>
    Array [
      <button
        className="showMore disabledShowMore"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "isShowingMore": false,
            },
          }
        }
        disabled={true}
      />,
    ]
  </div>,
]
`;

exports[`RefinementList rendering with facets and show more 1`] = `
Array [
  <div
    className="root customClassName"
  >
    <ul
      className="list"
    >
      Array [
        <li
          className="item"
          onClick={[Function]}
        >
          Array [
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": Object {
                    "attribute": "attribute",
                    "count": 1200,
                    "cssClasses": Object {
                      "checkbox": "checkbox",
                      "count": "count",
                      "disabledShowMore": "disabledShowMore",
                      "item": "item",
                      "label": "label",
                      "labelText": "labelText",
                      "list": "list",
                      "noRefinementRoot": "noRefinementRoot",
                      "noResults": "noResults",
                      "root": "root",
                      "searchBox": "searchBox",
                      "searchable": Object {
                        "form": "form",
                        "input": "input",
                        "loadingIcon": "loadingIcon",
                        "loadingIndicator": "loadingIndicator",
                        "reset": "reset",
                        "resetIcon": "resetIcon",
                        "root": "root",
                        "submit": "submit",
                        "submitIcon": "submitIcon",
                      },
                      "selectedItem": "selectedItem",
                      "showMore": "showMore",
                    },
                    "isRefined": false,
                    "label": "Amazon",
                    "url": undefined,
                  },
                }
              }
            />,
          ]
        </li>,
      ]
      Array [
        <li
          className="item selectedItem"
          onClick={[Function]}
        >
          Array [
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": Object {
                    "attribute": "attribute",
                    "count": 1000,
                    "cssClasses": Object {
                      "checkbox": "checkbox",
                      "count": "count",
                      "disabledShowMore": "disabledShowMore",
                      "item": "item",
                      "label": "label",
                      "labelText": "labelText",
                      "list": "list",
                      "noRefinementRoot": "noRefinementRoot",
                      "noResults": "noResults",
                      "root": "root",
                      "searchBox": "searchBox",
                      "searchable": Object {
                        "form": "form",
                        "input": "input",
                        "loadingIcon": "loadingIcon",
                        "loadingIndicator": "loadingIndicator",
                        "reset": "reset",
                        "resetIcon": "resetIcon",
                        "root": "root",
                        "submit": "submit",
                        "submitIcon": "submitIcon",
                      },
                      "selectedItem": "selectedItem",
                      "showMore": "showMore",
                    },
                    "isRefined": true,
                    "label": "Google",
                    "url": undefined,
                  },
                }
              }
            />,
          ]
        </li>,
      ]
    </ul>
    Array [
      <button
        className="showMore"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "isShowingMore": false,
            },
          }
        }
        disabled={false}
      />,
    ]
  </div>,
]
`;

exports[`RefinementList rendering with facets from search 1`] = `
Array [
  <div
    className="root customClassName"
  >
    <div
      className="searchBox"
    >
      Array [
        <div
          className="root"
        >
          <form
            action=""
            className="form"
            noValidate={true}
            onReset={[Function]}
            onSubmit={[Function]}
            role="search"
          >
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus={false}
              className="input"
              disabled={false}
              maxLength={512}
              onBlur={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Search"
              spellCheck={false}
              type="search"
              value=""
            />
            Array [
              <button
                className="submit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "submit",
                  }
                }
                hidden={false}
                title="Submit the search query."
                type="submit"
              />,
            ]
            Array [
              <button
                className="reset"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "reset",
                  }
                }
                hidden={true}
                title="Clear the search query."
                type="reset"
              />,
            ]
            Array [
              <span
                className="loadingIndicator"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "loadingIndicator",
                  }
                }
                hidden={true}
              />,
            ]
          </form>
        </div>,
      ]
    </div>
    <ul
      className="list"
    >
      Array [
        <li
          className="item"
          onClick={[Function]}
        >
          Array [
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": Object {
                    "attribute": "attribute",
                    "count": 1200,
                    "cssClasses": Object {
                      "checkbox": "checkbox",
                      "count": "count",
                      "disabledShowMore": "disabledShowMore",
                      "item": "item",
                      "label": "label",
                      "labelText": "labelText",
                      "list": "list",
                      "noRefinementRoot": "noRefinementRoot",
                      "noResults": "noResults",
                      "root": "root",
                      "searchBox": "searchBox",
                      "searchable": Object {
                        "form": "form",
                        "input": "input",
                        "loadingIcon": "loadingIcon",
                        "loadingIndicator": "loadingIndicator",
                        "reset": "reset",
                        "resetIcon": "resetIcon",
                        "root": "root",
                        "submit": "submit",
                        "submitIcon": "submitIcon",
                      },
                      "selectedItem": "selectedItem",
                      "showMore": "showMore",
                    },
                    "isRefined": false,
                    "label": "Amazon",
                    "url": undefined,
                  },
                }
              }
            />,
          ]
        </li>,
      ]
      Array [
        <li
          className="item selectedItem"
          onClick={[Function]}
        >
          Array [
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": Object {
                    "attribute": "attribute",
                    "count": 1000,
                    "cssClasses": Object {
                      "checkbox": "checkbox",
                      "count": "count",
                      "disabledShowMore": "disabledShowMore",
                      "item": "item",
                      "label": "label",
                      "labelText": "labelText",
                      "list": "list",
                      "noRefinementRoot": "noRefinementRoot",
                      "noResults": "noResults",
                      "root": "root",
                      "searchBox": "searchBox",
                      "searchable": Object {
                        "form": "form",
                        "input": "input",
                        "loadingIcon": "loadingIcon",
                        "loadingIndicator": "loadingIndicator",
                        "reset": "reset",
                        "resetIcon": "resetIcon",
                        "root": "root",
                        "submit": "submit",
                        "submitIcon": "submitIcon",
                      },
                      "selectedItem": "selectedItem",
                      "showMore": "showMore",
                    },
                    "isRefined": true,
                    "label": "Google",
                    "url": undefined,
                  },
                }
              }
            />,
          ]
        </li>,
      ]
    </ul>
  </div>,
]
`;

exports[`RefinementList rendering without facets 1`] = `
Array [
  <div
    className="root noRefinementRoot customClassName"
  />,
]
`;

exports[`RefinementList rendering without facets from search 1`] = `
Array [
  <div
    className="root noRefinementRoot customClassName"
  >
    <div
      className="searchBox"
    >
      Array [
        <div
          className="root"
        >
          <form
            action=""
            className="form"
            noValidate={true}
            onReset={[Function]}
            onSubmit={[Function]}
            role="search"
          >
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus={false}
              className="input"
              disabled={false}
              maxLength={512}
              onBlur={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Search"
              spellCheck={false}
              type="search"
              value=""
            />
            Array [
              <button
                className="submit"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "submit",
                  }
                }
                hidden={false}
                title="Submit the search query."
                type="submit"
              />,
            ]
            Array [
              <button
                className="reset"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "reset",
                  }
                }
                hidden={true}
                title="Clear the search query."
                type="reset"
              />,
            ]
            Array [
              <span
                className="loadingIndicator"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "loadingIndicator",
                  }
                }
                hidden={true}
              />,
            ]
          </form>
        </div>,
      ]
    </div>
    Array [
      <div
        className="noResults"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {},
          }
        }
      />,
    ]
  </div>,
]
`;
